login from settings and books listing

--- a/Simplified.xcconfig
+++ b/Simplified.xcconfig
@@ -1,4 +1,4 @@
-#include "Simplified+RMSDK.xcconfig"
+//#include "Simplified+RMSDK.xcconfig"
 
 HEADER_SEARCH_PATHS = $(inherited) "$(SDKROOT)/usr/include/libxml2" "$(SRCROOT)/readium-sdk/Platform/Apple/RDServices" "$(SRCROOT)/readium-sdk/Platform/Apple/include" "$(SRCROOT)/tenprintcover-ios/TenPrintCover" "$(SRCROOT)/adept-ios" "$(SRCROOT)/adobe-content-filter/public"
 
